--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.16",
     "@metamask/providers": "^10.2.1",
     "@next/font": "13.1.6",
+    "@openzeppelin/contracts": "^4.8.1",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
@@ -23,6 +24,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "solc": "^0.8.18",
+    "truffle": "^5.7.7",
     "typescript": "4.9.5"
   },
   "devDependencies": {
