--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "solc": "^0.8.18",
     "swr": "^2.0.3",
     "truffle": "^5.7.7",
+    "truffle-assertions": "^0.9.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
