--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,5 @@
 
 NEXT_PUBLIC_NETWORK_ID = 5777
 NEXT_PUBLIC_TARGET_CHAIN_ID = 1337
+
+SECRET_COOKIE_PASSWORD = sdfjla123jko1no12j31124la23523lksfsdfsdf2342334
