--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "genContractType": "abi-types-generator './public/contracts/NftMarket.json' --output='./types' --name=nftMarketContract --provider=ethers_v5",
     "lint": "next lint"
   },
   "dependencies": {
@@ -18,20 +19,25 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "ethers": "5.7.2",
     "next": "13.1.6",
+    "next-iron-session": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "solc": "^0.8.18",
     "swr": "^2.0.3",
     "truffle": "^5.7.7",
     "truffle-assertions": "^0.9.2",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.13",
+    "ethereum-abi-types-generator": "^1.3.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
