--- a/package.json
+++ b/package.json
@@ -25,18 +25,22 @@
     "ethereumjs-util": "^7.1.5",
     "ethers": "5.7.2",
     "form-data": "^4.0.0",
+    "heroicons": "^2.0.16",
     "next": "13.1.6",
     "next-iron-session": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "solc": "^0.8.18",
     "swr": "^2.0.3",
     "truffle": "^5.7.7",
     "truffle-assertions": "^0.9.2",
     "typescript": "4.9.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "v2": "^0.0.3"
   },
   "devDependencies": {
+    "@truffle/hdwallet-provider": "^2.1.8",
     "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.13",
     "ethereum-abi-types-generator": "^1.3.2",
